<resources>
    <string name="app_name">BatteryApp</string>
    <string name="my_string">Thank you for helping with my Thesis</string>
    <string name="NotificationString">A friendly reminder to use my app</string>
    <string name="TextBatteryLevel">Battery level: N/A</string>
    <string name="TextBatteryTemperature">Battery Temperature: N/A</string>
    <string name="batteryInfo">Battery Stats for your device ...</string>
    <string name="TextBatteryVoltage">Battery Voltage: N/A</string>
    <string name="TextBatteryTechnology">Battery Technology: N/A</string>
    <string name="TextBatteryStatus">Battery Status: N/A</string>
    <string name="TextBatteryHelath">Battery Health: N/A</string>
    <string name="TextUpdateTime">Last Updated: N/A</string>
    <string name="TextWifiStatus">WiFi Disable</string>
    <string name="TextDataStatus">Data Disable</string>
    <string name="TextBluetoothStatus">Bluetooth Disable</string>
    <string name="TextRAM">RAM Usage: N/A</string>
    <string name="TextBrightness">Current Brightness: N/A</string>
    <string name="TextCpuUsage">CPU Usage Estimation: N/A</string>
    <string name="textSampleFreq">Pick a Sampling Frequency between 5 and 10 seconds.</string>
    <string name="hintEditText">Default is 10 seconds.</string>
    <string name="TextButtonSubmit">submit</string>
    <string name="TextStartSession">START SESSION</string>
    <string name="TextEndSession">END SESSION</string>
    <string name="TextSwitch">Upload Only via WiFi  </string>
    <string name="TextResumeSession">Resume Session</string>
</resources>