<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/userInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/batteryInfo"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <View
                android:id="@+id/divider"
                android:layout_width="409dp"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/batteryLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:gravity="center"
                android:text="@string/TextBatteryLevel"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/batteryTemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:gravity="center"
                android:text="@string/TextBatteryTemperature"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/batteryVoltage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:gravity="center"
                android:text="@string/TextBatteryVoltage"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/batteryTechnology"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:gravity="center"
                android:text="@string/TextBatteryTechnology"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/batteryStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:gravity="center"
                android:text="@string/TextBatteryStatus"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/batteryHealth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:gravity="center"
                android:text="@string/TextBatteryHelath"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider2"
                android:layout_width="409dp"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/wifiStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|fill_vertical"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="@string/TextWifiStatus"
                    android:layout_weight="3"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/dataStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|fill_vertical"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="@string/TextDataStatus"
                    android:textColor="#000000"
                    android:layout_weight="3"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/bluetoothStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/TextBluetoothStatus"
                    android:textColor="#000000"
                    android:layout_weight="3"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/ramUsage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/TextRAM"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textBright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/TextBrightness"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cpuUsage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#00FFFFFF"
                android:gravity="center"
                android:text="@string/TextCpuUsage"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <ProgressBar
                android:id="@+id/barCPU"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FAFAFA"
                android:max="100"
                android:text="@string/TextCpuUsage" />

            <TextView
                android:id="@+id/textSampleFreq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/textSampleFreq"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <EditText
                    android:id="@+id/editTextNumber"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/hintEditText"
                    android:importantForAutofill="no"
                    android:inputType="number" />

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/TextButtonSubmit" />

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnUpload"
                android:layout_width="61dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"
                android:background="@android:color/holo_blue_bright"
                android:foregroundGravity="center"
                android:src="@android:drawable/stat_sys_upload"
                app:fabSize="normal" />

            <TextView
                android:id="@+id/UserID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/updateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/TextUpdateTime"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>